# azzmos

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: db.conf  headers.txt  test.html
ddl/: README  authority.sql  dns.sql  edges.sql  footprint.sql  fqp.sql  freq_bucket.sql  header_types.sql  headers.sql  headers_h.sql  install.sh  install.sql  ip.sql  ipv4.sql  ipv6.sql  path.sql  reponse.sql  response.sql  response_h.sql  scheme.sql  upload_edge.plsql  upload_fqp.plsql  upload_uri.plsql  uri.sql  url.sql
doc/: ER.dia  Scheduler_uml.dia  UC.dia  database.doc  datadictonary.txt  downloader.dia
m4/: m4_ax_lib_curl.m4
sql/: authority.sql  footprint.sql  install.sql  scheme.sql  upload_fqp.plsql  upload_uri.plsql  uri.sql  url_headers.sql
src/: DBSQLHandle.c  DownloadHTML.c  DownloadHTML.h  DownloadURI.c  DownloadURI.h  DownloadURITypes.c  DownloadURITypes.h  Makefile.am  Makefile.in  Options.c  Scheduler.c  Scheduler.h  URIExtract.c  URIExtract.h  URIHeaders.c  URIHeaders.h  URIHeadersTypes.h  URIObj.c  URIObj.h  URIQualifier.c  URIQualifier.h  Utils.c  Utils.h  azzmos.c  azzmos.h  common.h
test/: CuTest.c  CuTest.h  DBSQLHandleTest.c  DownloadURITest.c  Makefile.am  Makefile.in  SUtilsTest.c  URIExtractTest.c  URIHeadersTest.c
